--- a/blog/_posts/2019-01-01-2018-in-review.md
+++ b/blog/_posts/2019-01-01-2018-in-review.md
@@ -2,9 +2,12 @@
 layout: post
 title: "2018 in Review"
 tags: [retrospective]
+vanity: "2019-01-01-2018-in-review"
 ---
 
 This is a meta-post to review what happened in 2018.
+
+{% include blog_vars.html %}
 
 ## Posts Summary
 
@@ -45,52 +48,104 @@ I enjoy traveling and 2018 had plenty of trips. I haven't had been to Europe bef
 In England I explored mostly around London including the cities of Bath and Dover.
 
 <figure class="center_children">
-    <img src="{{site.url}}/resources/blog/2019-01-01-2018-in-review/2018_12_london.png" alt="london.png" />
-    <figcaption> Top: Tower Bridge; Iconic double-decker bus; Rosetta Stone at the British Museum. Bottom: Roman Baths; Dover Cliffs; Windsor Castle.</figcaption>
+    <img src="{{resources_path}}/uk.png" alt="uk.png" />
+    <figcaption> Top: 1. <a href="https://photos.app.goo.gl/WrBVD1y3NQh9iFvb9">Rosetta Stone</a> (British Museum); 2. <a href="https://photos.app.goo.gl/XVcZDyKeWv2wVQcw5">Westminster Abbey</a>; 3. <a href="https://photos.app.goo.gl/WrBVD1y3NQh9iFvb9">Tower Bridge</a>. Bottom: 4. <a href="https://photos.app.goo.gl/XVcZDyKeWv2wVQcw5">Windsor Castle</a>; 5. <a href="https://photos.app.goo.gl/XVcZDyKeWv2wVQcw5">Roman Baths</a>; 6. <a href="https://photos.app.goo.gl/XVcZDyKeWv2wVQcw5">Dover Cliffs</a>.</figcaption>
 </figure>
 
 The trip to Greece included Athens, Santorini and a train ride to Kalambaka, to see the Meteora monasteries.
 
 <figure class="center_children">
     <img src="{{site.url}}/resources/blog/2019-01-01-2018-in-review/2018_12_greece.png" alt="greece.png" />
-    <figcaption> Top: Athens seen from the Acropolis, the Parthenon, and Santorini. Bottom: Temple of Zeus in Athens, a monastery on top of a mountain and the Akrotiri museum.</figcaption>
+    <figcaption> Top: 1. <a href="https://photos.app.goo.gl/WrBVD1y3NQh9iFvb9">Athens seen from the Acropolis</a>, 2. <a href="https://photos.app.goo.gl/t4ygHeJStfqMLF7p9">the Parthenon</a> (in construction :/), and <a href="https://photos.app.goo.gl/t4ygHeJStfqMLF7p9">White houses of Oia</a> (Santorini). Bottom: 4. <a href="https://photos.app.goo.gl/t4ygHeJStfqMLF7p9">Temple of Zeus in Athens</a>, <a href="https://photos.app.goo.gl/t4ygHeJStfqMLF7p9">a monastery on top of a mountain</a> (Meteora) and <a href="https://photos.app.goo.gl/t4ygHeJStfqMLF7p9">the Akrotiri museum</a> (Santorini).</figcaption>
 </figure>
 
 There were also trips around the US, including Albuquerque in New Mexico, New Orleans in Louisiana and Los Angeles in California.
 
 <figure class="center_children">
-    <img src="{{site.url}}/resources/blog/2019-01-01-2018-in-review/2018_12_us.png" alt="us.png" />
-    <figcaption> Top: Taos Pueblo near Santa Fe NM, Petroglyphs in Albuquerque NM, Venice Canals in Los Angeles. Bottom: Getty Museum in Los Angeles; Jackson Square in Louisiana; French Quarter in Louisiana.</figcaption>
+    <img src="{{resources_path}}/us_cities.png" alt="us_cities.png" />
+    <figcaption> 1. <a href="Venice Canals in Los Angeles">French Quarter in Louisiana</a>; 2. <a href="https://photos.app.goo.gl/yTLciFHdc5shgcy28">Venice Canals in Los Angeles</a>; 3. <a href="Venice Canals in Los Angeles">Taos Pueblo near Santa Fe, NM</a>.</figcaption>
 </figure>
 
 There was also a trip to Montana, to the Glacier National Park. I really like National Parks and I'm glad to have visited this one, which is very beautiful.
 
 <figure class="center_children">
     <img src="{{site.url}}/resources/blog/2019-01-01-2018-in-review/2018_12_glacier.png" alt="glacier.png" />
-    <figcaption> Glacier National Park: Iceberg Glacier, Mountain Goat and Bearhat Mountain</figcaption>
+    <figcaption> Glacier National Park: 1. <a href="https://photos.app.goo.gl/yTLciFHdc5shgcy28"> Iceberg Glacier</a> 2. <a href="Glacier National Park">Mountain Goat</a>; 3. <a href="Glacier National Park">Bearhat Mountain</a></figcaption>
 </figure>
 
-&nbsp;
 
 ### Books
 
+
 This year I read a lot of non-fiction, especially science-related. My favorites science books were:
-*  *Blind Watchmaker* from Richard Dawkins. He delves into Darwin's theory of evolution to  conclude it's the most probable explanation for the existence of life on Earth.
-* *Genome: The Autobiography of a Species in 23 Chapters* by Matt Ridley is a highly engaging and elucidating tour of our genome. Each chapter is dedicated to one chromosome and he provides an example of trait or disease related to it.
-* *The Ghost Map: The Story of London's Most Terrifying Epidemic - and How It Changed Science, Cities, and the Modern World* by Steven Johnson. It describes some fascinating detective work from a doctor during a time we knew a lot less about diseases.
-In the realms of humanities,
-* *Enlightenment Now: The Case for Reason, Science, Humanism, and Progress* by Steven Pinker is a thorough presentation of facts and data to back the claim that despite localized set backs and short-term regressions, the world has been becoming more progressive. The idea that stuck the most with me is that each new generation tends to be more progressive than their parents, which shines a optimist light to a more humane future.
-* *Why Nations Fail: The Origins of Power, Prosperity, and Poverty*makes the claim that the success of a nation has nothing to do with geography, race or culture. There is a lot of world history in this book and I learned a bunch about different countries.
-I also enjoyed some biographies,
-* *I Am Malala* - inspiring story from a Pakistani girl who went on to win the Nobel Peace prize in 2014. Great overview of the history of Pakistan, and the life of a civilian under the regime of the Taliban.
-* *Born a Crime* - The comedian Trevor Noah had a pretty happening life. The book covers the recent history of South Africa and especially the *Apartheid*. He provides an interesting perspective on growing up on the later part of that regime and for being the son of a black mother and a white father.
-and reading stuff related to trips,
-* For Greece, I chose*The King Must Die*by Mary Renault*.*It is a fiction set in the mythical kingdom of Minos in Crete. I really like the fact it alludes to Greek myths but the story itself does not rely on supernatural elements.
-* For Montana, I picked *A River Runs Through It*by Norman Maclean. It's a short story set in rural Montana and a constant theme is family relations, fishing and the big questions of life.
-* *A Modern History of Japan* by Andrew Gordon. I was in Japan in 2017, not in 2018, but I only managed to finish the book this past year. I learned a bunch about the recent Japanese history, but not in enough detail to change how I thought about the experiences from my trip.
+
+<table class="books-table">
+  <colgroup>
+    <col span="1" style="width: 90%;">
+    <col span="1" style="width: 10%;">
+  </colgroup>
+
+  <tbody>
+
+    <tr>
+      <td><b>Blind Watchmaker</b> by Richard Dawkins. He delves into Darwin's theory of evolution to  conclude it's the most probable explanation for the existence of life on Earth.</td>
+      <td><img src="{{resources_path}}/blind-watchmaker.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+    <tr>
+      <td><b>Genome: The Autobiography of a Species in 23 Chapters</b> by Matt Ridley. It's a highly engaging and elucidating tour of our genome. Each chapter is dedicated to one chromosome and he provides an example of trait or disease related to it..</td>
+      <td><img src="{{resources_path}}/genome.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+
+    <tr>
+      <td><b>The Ghost Map: The Story of London's Most Terrifying Epidemic - and How It Changed Science, Cities, and the Modern World</b> by Steven Johnson. It describes some fascinating detective work from a doctor during a time we knew a lot less about diseases.</td>
+      <td><img src="{{resources_path}}/ghost-map.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+
+    <tr>
+      <td><b>Enlightenment Now: The Case for Reason, Science, Humanism, and Progress</b> by Steven Pinker. It's a thorough presentation of facts and data to back the claim that despite localized set backs and short-term regressions, the world has been becoming more progressive. The idea that stuck the most with me is that each new generation tends to be more progressive than their parents, which shines a optimist light to a more humane future.</td>
+      <td><img src="{{resources_path}}/enlightenment-now.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+    <tr>
+      <td><b>Why Nations Fail: The Origins of Power, Prosperity, and Poverty</b> by Daron Acemoglu and James A. Robinson. It makes the claim that the success of a nation has nothing to do with geography, race or culture. There is a lot of world history in this book and I learned a bunch about different countries.</td>
+      <td><img src="{{resources_path}}/why-nations-fail.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+
+    <tr>
+      <td><b>I Am Malala</b> by Christina Lamb and Malala Yousafzai. Inspiring story from a Pakistani girl who went on to win the Nobel Peace prize in 2014. Great overview of the history of Pakistan, and the life of a civilian under the regime of the Taliban.</td>
+      <td><img src="{{resources_path}}/i-am-malala.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+
+    <tr>
+      <td><b>Born a Crime</b> by Trevor Noah. The comedian had a pretty happening life. The book covers the recent history of South Africa and especially the *Apartheid*. He provides an interesting perspective on growing up on the later part of that regime and for being the son of a black mother and a white father.</td>
+      <td><img src="{{resources_path}}/born-a-crime.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+
+    <tr>
+      <td><b>The King Must Die</b> by Mary Renault. I read this book for the trip to Greece. It is a fiction set in the mythical kingdom of Minos in Crete. I really like the fact it alludes to Greek myths but the story itself does not rely on supernatural elements.</td>
+      <td><img src="{{resources_path}}/the-king-must-die.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+
+    <tr>
+      <td><b>A River Runs Through It</b> by Norman Maclean. I read this book for the trip to Montana. It's a short story set in rural Montana and a constant theme is family relations, fishing and the big questions of life.</td>
+      <td><img src="{{resources_path}}/a-river-runs-through-it.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+    <tr>
+      <td><b>A Modern History of Japan</b> by Andrew Gordon. I was in Japan in 2017, not in 2018, but I only managed to finish the book this past year. I learned a bunch about the recent Japanese history, but not in enough detail to change how I thought about the experiences from my trip.</td>
+      <td><img src="{{resources_path}}/a-modern-history-of-japan.jpg" alt="Book cover for title on the column to the left."/></td>
+    </tr>
+
+  </tbody>
+</table>
 
 ### Movies
 
 I haven't watched many movies but really enjoyed *Coco* and *Crazy Rich Asians*.
-
-&nbsp;
