--- a/blog/_posts/2021-11-29-t-digest.md
+++ b/blog/_posts/2021-11-29-t-digest.md
@@ -50,7 +50,7 @@ Consider a real valued $0 \le \theta \le 1$. Let's define **$\theta$-quantile** 
 
 ### Quantiles vs. Percentiles
 
-If the range $\theta$ is given as a number between 0 and 100 instead of 0 and 1, the corresponding value is called **percentile** and is often denoted by $p_{\theta}$, so for example $q_{0.75} = q_{0.75}$.
+If the range $\theta$ is given as a number between 0 and 100 instead of 0 and 1, the corresponding value is called **percentile** and is often denoted by $p_{\theta}$, so for example $q_{0.75} = p_{75}$.
 
 In this post we'll only use quantiles to avoid working with multiple definitions.
 
