change blog start to 2010, use variables for #posts

--- a/blog/_posts/2015-01-01-2014-in-review.md
+++ b/blog/_posts/2015-01-01-2014-in-review.md
@@ -3,6 +3,7 @@ layout: post
 title: "2014 in Review"
 tags: [retrospective]
 ---
+{% include blog_vars.html %}
 
 I'd like to share a little of what happened during 2014. I've been living in the US for two years now. Time flies!
 
@@ -27,7 +28,7 @@ I finished reading [Gödel, Escher and Bach](http://www.amazon.com/G%C3%B6del-Es
 
 The most popular post of 2014 is still [Skip Lists in Python]({{site.url}}/blog/2012/09/25/skip-lists-in-python.html) from 2012 (1.5k views). From this year, it was [An Introduction to the Parsec library]({{site.url}}/blog/2014/01/21/an-introduction-to-the-parsec-library.html) (900 views).
 
-I tried to keep the frequency of monthly posts, but I missed March and September. The blog has 2 years and 24 posts.
+I tried to keep the frequency of monthly posts, but I missed March and September. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 ### Ideas for 2015
 
