--- a/blog/_posts/2016-01-01-2015-in-review.md
+++ b/blog/_posts/2016-01-01-2015-in-review.md
@@ -3,6 +3,7 @@ layout: post
 title: "2015 in Review"
 tags: [retrospective]
 ---
+{% include blog_vars.html %}
 
 Another year is over! This is a meta-post to review what happened in 2015. I've been in the US for over 3 years now. 🇺🇸
 
@@ -34,7 +35,7 @@ The most popular post was the [Introduction to the Parsec Library]({{site.url}}/
 
 The blog was visited by 7k people over the year, up from 5k last year.
 
-I've tried to post once a month, but missed September and December. I did post more than once in some months though, for a total of 14 posts. The blog completed 3 years with 38 posts.
+I've tried to post once a month, but missed September and December. I did post more than once in some months though, for a total of 14 posts. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 ### Resolutions for 2016
 
