--- a/blog/_posts/2017-01-01-2016-in-review.md
+++ b/blog/_posts/2017-01-01-2016-in-review.md
@@ -3,6 +3,7 @@ layout: post
 title: "2016 in Review"
 tags: [retrospective]
 ---
+{% include blog_vars.html %}
 
 This is a meta-post to review what happened in 2016.
 
@@ -13,7 +14,9 @@ From my [last year's resolutions]({{site.url}}/blog/2016/01/01/2015-in-review.ht
 I've only managed to try out one data visualization project, the [hex map]({{site.url}}/blog/2016/11/05/us-as-an-hexagonal-map.html), and I'll continue exploring this area next year.
 
 I missed enrolling in any Coursera classes and learning about either Scala or Spark, unfortunately.
+
 ### Personal
+
 The end of the year is a good time to look back and remember all the things I've done besides work and the technical blog.
 
 **Trips**
@@ -67,8 +70,10 @@ I'm not a big movie watcher, but this year I made a point of watching well known
 ### The Blog in 2016
 The most popular post was the [Introduction to the Parsec Library]({{site.url}}/blog/2014/01/21/an-introduction-to-the-parsec-library.html), with 2k visits. No post from this year got popular, all of them below 50 visits :( Overall it had 7.5k visitors.
 
-I kept the resolution to post once a month. I missed April, but I made up for it in November, so I wrote a total of 12 posts (excluding the meta post). The blog completed 4 years with 51 posts.
+I kept the resolution to post once a month. I missed April, but I made up for it in November, so I wrote a total of 12 posts (excluding the meta post). The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 And we now have a new domain, kunigami.blog :)
+
 ### Resolutions for 2017
+
 I missed many resolutions from last year, so I'll carry some over, which includes finishing Okasaki’s *Purely Functional Data Structures* and learning about Scala and Spark. I'd like to write an iPhone app next year too and continue exploring ideas around data visualization.
