--- a/blog/_posts/2018-01-05-2017-in-review.md
+++ b/blog/_posts/2018-01-05-2017-in-review.md
@@ -3,6 +3,7 @@ layout: post
 title: "2017 in Review"
 tags: [retrospective]
 ---
+{% include blog_vars.html %}
 
 This is a meta-post to review what happened in 2017.
 
@@ -67,7 +68,7 @@ For non-fiction, *Survival of the Sickest* was my favorite science book of the y
 
 Like last year, the most popular post was the [Introduction to the Parsec Library]({{site.url}}/blog/2014/01/21/an-introduction-to-the-parsec-library.html), with 1.6k visits. From this year, the notes on [Google's Spanner database]({{site.url}}/blog/2017/04/27/paper-reading---spanner:-google's-globally-distributed-database.html) paper got 250 views. Overall it had 9.5k visitors.
 
-I kept the resolution to post at least once a month. The blog completed 5 years with 66 posts.
+I kept the resolution to post at least once a month. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 ### Resolutions for 2018
 
