--- a/blog/_posts/2019-01-01-2018-in-review.md
+++ b/blog/_posts/2019-01-01-2018-in-review.md
@@ -29,7 +29,7 @@ Besides BuckleScript, I haven't dedicated too much time to Web Development topic
 
 The most popular post is still the 2014 [Introduction to the Parsec Library]({{site.url}}/blog/2014/01/21/an-introduction-to-the-parsec-library.html), with 1.3k visits. From this year, the recreational math problem, [Bulls and Cows]({{site.url}}/blog/2018/06/04/bulls-and-cows.html) was most viewed. Overall the blog had a total of 9.6k visitors.
 
-I kept the resolution to post once a month on average. The blog completed 6 years with 79 posts.
+I kept the resolution to post once a month on average. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 ## Resolutions for 2019
 
