--- a/blog/_posts/2020-01-04-2019-in-review.md
+++ b/blog/_posts/2020-01-04-2019-in-review.md
@@ -27,7 +27,7 @@ I assembled my own Desktop which inspired me to learn more about the [Von Neuman
 
 The most popular blog post of the year was the Python Type Hints (10k views, 9k visits in just 2 days!). It was somehow feature on the front page of Hacker News being at position #8 at some point! The discussion was mostly about the merits of typed vs. untyped languages but it was a nice surprise nevertheless.
 
-With some delays here and there, I kept the resolution to post once a month on average. The blog completed 7 years with 92 posts.
+With some delays here and there, I kept the resolution to post once a month on average. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 ## Resolutions for 2020
 
