--- a/blog/_posts/2021-01-01-2020-in-review.md
+++ b/blog/_posts/2021-01-01-2020-in-review.md
@@ -33,7 +33,7 @@ This year the blog went through major transformations. After about 10 years usin
 
 One of the features I miss the most is the well integrated analytics. I'm currently using Google analytics but it doesn't have a reliable way to exclude my own visits, which is a lot especially while writing a post. With that caveat, according to the data, the [Buddy Memory Allocation]({{site.url}}/blog/2020/07/31/buddy-memory-allocation.html) post was the most popular with 146 unique visits. Overall the blog had a total of 1.6k visitors.
 
-I kept the resolution to have at least one post a month on average, by writing 19 posts. The blog completed 8 years with 115 posts (some of which were ported and translated from my old blog in Portuguese).
+I kept the resolution to have at least one post a month on average, by writing {{posts_last_year}} posts. The blog completed {{blog_age}} years with {{posts_so_far}} posts (some of which were ported and translated from my old blog in Portuguese).
 
 ## Resolutions for 2021
 
