--- a/blog/_posts/2022-01-01-2021-in-review.md
+++ b/blog/_posts/2022-01-01-2021-in-review.md
@@ -41,7 +41,7 @@ Finally I improved the process of managing posts during the draft phase, documen
 
 ## The Blog in 2021
 
-I kept the resolution to have at least one post a month on average, by writing 22 posts. The blog completed 9 years with 144 posts (some of which were ported and translated from my old blog in Portuguese).
+I kept the resolution to have at least one post a month on average, by writing {{posts_last_year}} posts. The blog completed {{blog_age}} years with {{posts_so_far}} posts (some of which were ported and translated from my old blog in Portuguese).
 
 The post [Linear Predictive Coding in Python]({{blog}}/2021/05/13/lpc-in-python.html) received the most unique visits, 893. Overall the blog had a total of 5k visitors.
 
