add a missing review

--- a/blog/_posts/2023-01-01-2022-in-review.md
+++ b/blog/_posts/2023-01-01-2022-in-review.md
@@ -213,7 +213,7 @@ I also went back to visit Brazil after many years.
     </tr>
 
   <tr>
-    <td><b>How Not To Be Wrong</b> by Jordan Ellenberg. My initial assumption from the title of the book was that it's about using math to win arguments. The book is more on how to avoid fallacies, especially in probability and statistics, where our intuition is often wrong. The book covers many real-life topics including p-hacking, fair voting, correlation vs. causation, lotteries. I specially liked the topic on Buffon's needle, so much so I decided to write a <a href="({{blog}}/2022/08/16/buffons-needle.html)">post about it</a>.
+    <td><b>How Not To Be Wrong</b> by Jordan Ellenberg. My initial assumption from the title of the book was that it's about using math to win arguments. The book is more on how to avoid fallacies, especially in probability and statistics, where our intuition is often wrong. The book covers many real-life topics including p-hacking, fair voting, correlation vs. causation, lotteries. I especially liked the topic on Buffon's needle, so much so I decided to write a <a href="({{blog}}/2022/08/16/buffons-needle.html)">post about it</a>.
     <br /><br />
     I came out from this book a bit more cynical about medical experiments. It seems like besides lack of causality there's a lot of statistical flukes that are hard to catch, so there's a lot of noise coming from them.
     </td>
@@ -224,6 +224,14 @@ I also went back to visit Brazil after many years.
     <td><b>The Effective Engineer</b> by Edmond Lau. Lau provides several concrete tips for improving productivity as a individual contributor. Topics include: optimize for learning, invest in iteration speed, measure what you want to improve, validate your ideas early and often, improve project estimation skills, and balance quality with pragmatism. A lot of these are common good practices but it's nice to have them explicitly organized.
     </td>
     <td><img src="{{resources_path}}/effective-eng.jpg" alt="{{book_cover_alt}}"/></td>
+  </tr>
+
+  <tr>
+    <td><b>Spillover</b> (Audiobook) by David Quammen. Spillover is the phenomena in which a disease originally endemic to other animal species spills over to humans. Most times it infects a few individuals and disappears, but it eventually becomes endemic to humans as well. The book describes many diseases including hendra virus, AIDS, ebola, influenza, coronavirus, lyme, etc.
+    <br /><br />
+    One interesting fact I learned is that a disproportionate number of diseases originate in bats (even when transmitted via horses, monkeys or ticks). The author also makes the eerie observation that sick people from these diseases show visible symptoms, making it easier to avoid them and prevent spread, but if a disease were to spread asymptomatically we would have a hard time (this book was written before the Covid pandemic).
+    </td>
+    <td><img src="{{resources_path}}/spillover.jpg" alt="{{book_cover_alt}}"/></td>
   </tr>
 
   <tr>
