--- a/blog/_posts/2023-01-01-2022-in-review.md
+++ b/blog/_posts/2023-01-01-2022-in-review.md
@@ -35,7 +35,7 @@ Until March I was building a notebook-like tool at work, so I took a look at [Ju
 
 In March I made a big transition! I've been doing mostly web frontend work (Hack/JavaScript) for over 10 years and decided to switch to distributed systems backend (C++/Python). I devoted a lot of posts to document my ramp up studies, in particular in C++ and Distributed Systems.
 
-I had last worked with C++ in 2011, havung used it in programming contents, during my Master's and for my [Google Summer of Code]({{blog}}/2011/05/01/google-summer-of-code-2011.html) project. I missed the big changes that happened with C++11 so I was mostly catching up.
+I had last worked with C++ in 2011, having used it in programming contests, during my Master's and for my [Google Summer of Code]({{blog}}/2011/05/01/google-summer-of-code-2011.html) project. I missed the big changes that happened with C++11 so I was mostly catching up.
 
 I focused on concepts I found confusing while reading/writing code such as [Moving Semantics]({{blog}}/2022/03/01/moving-semantics-cpp.html), [Memory Management Choices]({{blog}}/2022/04/07/memory-management-choices-cpp.html), [Smart Pointers]({{blog}}/2022/06/10/smart-pointers-cpp.html) and [Type Traits]({{blog}}/2022/12/08/type-traits-in-cpp.html). I also read cover-to-cover the book [Effective Modern C++]({{blog}}/2022/10/25/review-effective-modern-cpp.html) by Scott Meyers and it was very helpful.
 
@@ -284,7 +284,7 @@ I also went back to visit Brazil after many years.
       <br /><br />
       The core principle for city success is diversity. This includes diversity of usage (e.g. mix of residential, leisure and business), income (poor and rich in the same neighborhood) and buildings age and look (old and new constructions, short and tall buildings). A corollary of these points is that planned cities or housing projects are doomed to fail since they segregate by income and usage and usually consists of new buildings all looking the same.
       <br /><br />
-      Jacobs uses New York as a major example, but she also mentions Boston, San Francisco and Los Angeles. She often uses San Francisco's civic center as a counter-example to diversity and it's interesting to see how this perpetuates to this day, with lots of homeless and drug usage around that area which contrasts with the gradiose of its surrounding buildings and upscale stores. Another interesting bit about SF is that its hills are a feature for diversity because it occludes the view and is a natural break to sameness. I can't help constrasting this with flatter areas of the city such as Sunset where we see long blocks of similar looking residential buildings.
+      Jacobs uses New York as a major example, but she also mentions Boston, San Francisco and Los Angeles. She often uses San Francisco's civic center as a counter-example to diversity and it's interesting to see how this perpetuates to this day, with lots of homeless and drug usage around that area which contrasts with the gradiose of its surrounding buildings and upscale stores. Another interesting bit about SF is that its hills are a feature for diversity because it occludes the view and is a natural break to sameness. I can't help constrasting this with flatter areas of SF such as the Sunset where we see long blocks of similar looking residential buildings.
       <br /><br />
       This was a strange read because I disliked reading it and slougged through to finish, but on the other hand there are many interesting things I learned and it changed the way I view cities and I keep thinking back to it. I think one reason for the dislike is that this book feels very repetitive, much like Girard's <i>Deceit, Desire and the Novel</i>.
       </td>
