add related post

--- a/blog/_posts/2022-12-27-on-memory.md
+++ b/blog/_posts/2022-12-27-on-memory.md
@@ -95,6 +95,8 @@ I'm glad I did, since it made me do some reading and I ran into Nielsen's essay 
 
 [CPU Cache]({{blog}}/2020/04/24/cpu-cache.html) - I think it's inevitable for us programmers to avoid making analogies between computers and our brains, like I did in the section *External Memory*. The idea of co-locating processing and memory also reminds me of the CPU cache.
 
+[Turing Machines and Undecidability]({{blog}}/2013/12/28/turing-machines-and-undecidability.html) - Memory is an important component in computability. The type of computation finite automata can perform is evaluating regular expressions, while if we equip it with memory (in a form of a stack), we get Turing machines, general purpose computing machines, capable of doing the same computations of any computer and possibly of the human brain.
+
 ## References
 
 * [[1](http://augmentingcognition.com/ltm.html)] Augmenting Long-term Memory, M. Nielsen
