--- a/blog/_posts/2023-01-01-2022-in-review.md
+++ b/blog/_posts/2023-01-01-2022-in-review.md
@@ -59,6 +59,8 @@ I kept the resolution to have at least one post a month on average, by writing {
 
 The post [Linear Predictive Coding in Python]({{blog}}/2021/05/13/lpc-in-python.html) continued to be the most popular post and received 3.5k unique visits. Overall the blog had a total of 11.6k visitors.
 
+This year the blog got its first external contribution: `@adql` [fixed](https://github.com/kunigami/kunigami.github.io/pull/8) issues with the [An Introduction to the Parsec Library]({{blog}}/2014/01/21/an-introduction-to-the-parsec-library.html) post.
+
 ## Resolutions for 2023
 
 This year I dropped my resolution of studying machine learning for speech recognition midway due to having to ramp up on my new team and being generally unfocused, but I want to keep the resolution for next year.
