more concurrency tools

--- a/blog/_posts/2023-04-29-raii.md
+++ b/blog/_posts/2023-04-29-raii.md
@@ -133,12 +133,12 @@ MyClass c;
 } // closes the file upon destruction
 {% endhighlight %}
 
-**Locks.** A final example is making sure locks are released, avoiding potential deadlocks. Example using `std::unique_lock`:
+**Locks.** A final example is making sure locks are released, avoiding potential deadlocks. Example using `std::lock_guard`:
 
 {% highlight c++ %}
 std::mutex m;
 {
-    std::unique_lock<std::mutex> lock(m); // acquire lock
+    std::lock_guard<std::mutex> lock(m); // acquire lock
     // access exclusive resource
 } // lock is released
 {% endhighlight %}
