--- a/blog/_posts/2023-04-29-raii.md
+++ b/blog/_posts/2023-04-29-raii.md
@@ -96,7 +96,7 @@ void f() {
 
 Now the object belongs to all variables in scope that have a pointer to it. Theoretically, the lifetime of this object only ends when all such variables fall out of scope. In this case, the C++ runtime doesn't have global visibility on which variables have pointers to an object, so it will not try to delete the object. It's up to the user to do so.
 
-C++11 introduced smart pointers (`std::unique_ptr` and `std::shared_ptr`) which do have visibility on the lifetime of the object so they can delete it - note this is opaque to the C++ runtime. There are exceptions in the presence of cyclic references, which we discuss later in *Finalizers*.
+C++11 introduced smart pointers (`std::unique_ptr` and `std::shared_ptr`) which do have visibility on the lifetime of the object, at a cost, so they can delete it - note this is done at the STD library level, not by the C++ runtime. There are exceptions in the presence of cyclic references, which we discuss later in *Finalizers*.
 
 ## Applications
 
