add thumbnail to raii

--- a/blog/_posts/2023-04-29-raii.md
+++ b/blog/_posts/2023-04-29-raii.md
@@ -8,6 +8,11 @@ excerpt_separator: <!--more-->
 
 {% include blog_vars.html %}
 
+
+<figure class="image_float_left">
+  <img src="{{resources_path}}/cleanup.png" alt="group of miniature humans mopping the floor" />
+</figure>
+
 One of my favorite features from C++ is the RAII idiom, which stands for *Resource acquisition is initialization* [1], a term coined by Bjarne Stroustrup.
 
 The general idea is that resource acquisition (memory, locks, file descriptors) is done during the constructor and released during the destructor.
