link to extended book reviews

--- a/blog/_posts/2024-01-01-2023-in-review.md
+++ b/blog/_posts/2024-01-01-2023-in-review.md
@@ -144,7 +144,8 @@ In November we visited New Zealand.
     <tr>
       <td><b>India in the Persianate Age</b> by Richard M. Eaton. This book covers the history of South Asia (India, Pakistan and Bangladesh) with a focus on the Persian cultural influence over it. A big portion of the book focuses on the Mughal Empire but it also describes earlier Persian-culture conquests.
       <br /><br />
-      I got this book because I was interested in learning about the Mughal Empire in more details. This felt like one of the books you get much more than you asked for. Rating: 5/5
+
+      I got this book because I was interested in learning about the Mughal Empire in more details. This felt like one of the books you get much more than you asked for. Rating: 5/5. (<a href="{{books}}/india-in-the-persianate-age.html">Extended review</a>).
       </td>
       <td><img src="{{resources_path}}/india.jpg" alt="{{book_cover_alt}}"/></td>
     </tr>
@@ -153,8 +154,7 @@ In November we visited New Zealand.
       <td><b>A New  Illustrated History of Taiwan</b> by Dr. Wan-yao Chou. I bought this book during a trip to Taiwan. It covers the history of the island from early days until recent times.
 
       <br /><br />
-      I learned quite a bit about Taiwan and enjoyed the illustrations and old photographs. Rating: 5/5
-
+      I learned quite a bit about Taiwan and enjoyed the illustrations and old photographs. Rating: 5/5. (<a href="{{books}}/a-new-illustrated-history-of-taiwan.html">Extended review</a>)
       </td>
       <td><img src="{{resources_path}}/taiwan.jpg" alt="{{book_cover_alt}}"/></td>
     </tr>
