--- a/blog/_posts/2024-01-01-2023-in-review.md
+++ b/blog/_posts/2024-01-01-2023-in-review.md
@@ -77,7 +77,9 @@ The end of the year is a good time to look back and remember all the things I’
 
 ### Trips
 
-In April we went to Beijing.
+In April we went to Beijing. I had been to Beijing in 2010 briefly on my way to Harbin for the [ICPC World Finals]({{blog}}/2010/02/14/acm-icpc-world-finals-2010.html). At that time, I was only able to see the Forbidden city.
+
+This time I saw the major sites in the city and also the Great Wall of China at Mutianyu. The city feels very modern, especially with the payment system (which in my experience as a non-citizen tourist, hard to use seamlessly). Food was amazing.
 
 <figure class="center_children">
     <img src="{{resources_path}}/beijing-collage.png" alt="a collage of photos from a trip to Beijing"/>
@@ -93,7 +95,9 @@ In April we went to Beijing.
     </figcaption>
 </figure>
 
-And then Taiwan:
+On the way back from Beijing, we stopped at Taiwan. We went around the west coast of the country leveraging its excellent rail system. Starting from Taipei, we went all the way down to Kaohsiung.
+
+One of the most memorable experiences were the night markets in Taipei and hiking through tea plantations, and bamboo and cedar forests in Alishan.
 
 <figure class="center_children">
     <img src="{{resources_path}}/taiwan-collage.png" alt="a collage of photos from a trip to Taiwan"/>
@@ -109,7 +113,9 @@ And then Taiwan:
     </figcaption>
 </figure>
 
-In November we visited New Zealand.
+In November we visited New Zealand. We went on roadtrips across the North and South Islands, and did a lot of hiking. Trails are aplenty with lush green forests (including giant fern trees), snow capped mountains and turquoise blue lakes.
+
+Outside of hiking, I also enjoyed the Hobbiton and the Glowworm Cave in Waitomo.
 
 <figure class="center_children">
     <img src="{{resources_path}}/new-zealand-collage.png" alt="a collage of photos from a trip to New Zealand"/>
