add link to stoic review

--- a/blog/_posts/2024-01-01-2023-in-review.md
+++ b/blog/_posts/2024-01-01-2023-in-review.md
@@ -300,7 +300,7 @@ Outside of hiking, I also enjoyed the Hobbiton and the Glowworm Cave in Waitomo.
     </tr>
 
     <tr>
-      <td><b>Letters from a Stoic</b> by Seneca. I admire stoic way of life and strive to follow it, so reading this book was very pleasant and reaffirming. This book is a collection of letters from Seneca to his friend Lucilius. Rating: 5/5
+      <td><b>Letters from a Stoic</b> by Seneca. I admire stoic way of life and strive to follow it, so reading this book was very pleasant and reaffirming. This book is a collection of letters from Seneca to his friend Lucilius. Rating: 5/5.  (<a href="{{books}}/letters-from-a-stoic.html">Extended review</a>).
 
       </td>
       <td><img src="{{resources_path}}/stoic.jpg" alt="{{book_cover_alt}}"/></td>
