--- a/blog/_posts/2024-01-01-2023-in-review.md
+++ b/blog/_posts/2024-01-01-2023-in-review.md
@@ -200,7 +200,7 @@ Outside of hiking, I also enjoyed the Hobbiton and the Glowworm Cave in Waitomo.
    <tr>
       <td><b>The Penguin History of Aotearoa</b> by Michael King. It covers NZ’s pre-history (e.g. how it came to be as landmass), the Māori settlement from Polynesia, European colonization (mainly English and Scottish), the European-Māori relationship, politics, wars and modern times.
       <br /><br />
-      I learned a lot of interesting things from this one, and liked much more than Kanze's book. Rating: 5/5
+      I learned a lot of interesting things from this one, and liked much more than Kanze's book. Rating: 5/5. (<a href="{{books}}/the-penguin-history-of-aotearoa.html">Extended review</a>).
       </td>
 
       <td><img src="{{resources_path}}/history-nz.jpg" alt="{{book_cover_alt}}"/></td>
@@ -300,7 +300,7 @@ Outside of hiking, I also enjoyed the Hobbiton and the Glowworm Cave in Waitomo.
     </tr>
 
     <tr>
-      <td><b>Letters from a Stoic</b> by Seneca. I admire stoic way of life and strive to follow it, so reading this book was very pleasant and reaffirming. This book is a collection of letters from Seneca to his friend Lucilius. Rating: 5/5.  (<a href="{{books}}/letters-from-a-stoic.html">Extended review</a>).
+      <td><b>Letters from a Stoic</b> by Seneca. I admire stoic way of life and strive to follow it, so reading this book was very pleasant and reaffirming. This book is a collection of letters from Seneca to his friend Lucilius. Rating: 5/5. (<a href="{{books}}/letters-from-a-stoic.html">Extended review</a>).
 
       </td>
       <td><img src="{{resources_path}}/stoic.jpg" alt="{{book_cover_alt}}"/></td>
